# markov-chain-music

./: Cargo.toml
dataset/: readme.md
src/: main.rs
src/dataset_parser/: dataset_parser.rs  mod.rs  parser.rs  parser_error.rs  record.rs
src/song/: data_point.rs  lyrics_parser.rs  mod.rs  song.rs  structure_token.rs
