[package]
name = "markov-chain-music"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
markov = { version = "1.1.0", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
